--- a/MyFlickr/Base.lproj/Main.storyboard
+++ b/MyFlickr/Base.lproj/Main.storyboard
@@ -32,10 +32,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ecl-zE-dos">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="758"/>
                                 <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Mou-zO-8oR">
-                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="itemSize" width="128" height="78"/>
                                     <size key="headerReferenceSize" width="50" height="66"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -171,12 +171,25 @@
                                     </subviews>
                                 </collectionReusableView>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="14L-6D-4Ua">
+                                <rect key="frame" x="0.0" y="758" width="414" height="50"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="xfN-Qm-XcV">
+                                        <rect key="frame" x="197" y="15" width="20" height="20"/>
+                                        <color key="color" red="0.66274509800000003" green="0.6588235294" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="xfN-Qm-XcV" firstAttribute="centerX" secondItem="14L-6D-4Ua" secondAttribute="centerX" id="5XO-ud-rA2"/>
+                                    <constraint firstAttribute="height" constant="50" id="DJu-gz-KmL"/>
+                                    <constraint firstItem="xfN-Qm-XcV" firstAttribute="centerY" secondItem="14L-6D-4Ua" secondAttribute="centerY" id="FKi-a8-JkW"/>
+                                </constraints>
+                            </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SaF-TT-eaz">
                                 <rect key="frame" x="0.0" y="29" width="414" height="779"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kCR-Nv-DhK" customClass="AnimationView" customModule="Lottie">
                                         <rect key="frame" x="137" y="60" width="140" height="140"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="140" id="B7d-jV-uF6"/>
                                             <constraint firstAttribute="width" constant="140" id="lfH-vB-ZO8"/>
@@ -244,14 +257,17 @@
                         <constraints>
                             <constraint firstItem="SaF-TT-eaz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="57Y-UR-LV5"/>
                             <constraint firstItem="nG8-mn-LfX" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="AvL-lg-YOD"/>
+                            <constraint firstItem="14L-6D-4Ua" firstAttribute="top" secondItem="ecl-zE-dos" secondAttribute="bottom" id="Bqg-KA-u8A"/>
                             <constraint firstItem="ecl-zE-dos" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="CqS-qt-HJQ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ecl-zE-dos" secondAttribute="trailing" id="HLd-6S-vLp"/>
                             <constraint firstItem="SaF-TT-eaz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IdN-5w-P0p"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="SaF-TT-eaz" secondAttribute="bottom" id="MP8-je-xd0"/>
+                            <constraint firstItem="14L-6D-4Ua" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WjQ-wb-DGA"/>
                             <constraint firstItem="nG8-mn-LfX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="X2r-2c-TGr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="14L-6D-4Ua" secondAttribute="bottom" id="c90-zd-X1R"/>
+                            <constraint firstItem="14L-6D-4Ua" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="fAN-lG-e9o"/>
                             <constraint firstItem="SaF-TT-eaz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="29" id="pP2-qN-Pjd"/>
+                            <constraint firstItem="SaF-TT-eaz" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ree-zx-vdS"/>
                             <constraint firstItem="ecl-zE-dos" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ruI-dR-hoj"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ecl-zE-dos" secondAttribute="bottom" id="seo-Au-0eo"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="MyFlickr" id="rF6-De-xAW"/>
@@ -262,6 +278,8 @@
                         <outlet property="errorDescriptionLabel" destination="zth-F1-twX" id="KUr-Dy-HxQ"/>
                         <outlet property="errorRefreshButton" destination="ryC-dP-Eig" id="e01-yB-vpS"/>
                         <outlet property="errorView" destination="SaF-TT-eaz" id="UKN-I4-bMc"/>
+                        <outlet property="loadMoreViewHeightConstraint" destination="DJu-gz-KmL" id="gVp-Cw-5tf"/>
+                        <outlet property="loadMorectivityIndicatorView" destination="xfN-Qm-XcV" id="aQW-LG-zkC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -367,6 +385,7 @@
         <designable name="kCR-Nv-DhK"/>
     </designables>
     <inferredMetricsTieBreakers>
+        <segue reference="YbC-ML-0fG"/>
         <segue reference="3g7-XT-vpG"/>
     </inferredMetricsTieBreakers>
     <resources>
