--- a/MyFlickr/Base.lproj/Main.storyboard
+++ b/MyFlickr/Base.lproj/Main.storyboard
@@ -58,11 +58,10 @@
                                                             <rect key="frame" x="0.0" y="116" width="171" height="40"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Explore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbM-oC-46I">
-                                                                    <rect key="frame" x="10" y="10" width="151" height="20.5"/>
+                                                                    <rect key="frame" x="10" y="11.5" width="151" height="17.5"/>
                                                                     <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="14"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
-                                                                    <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <size key="shadowOffset" width="0.0" height="3"/>
                                                                 </label>
                                                             </subviews>
@@ -117,19 +116,19 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" id="S3j-l0-jf4">
-                                            <rect key="frame" x="0.0" y="-354" width="394" height="774"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="56"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r13-OO-w5n">
-                                                    <rect key="frame" x="10" y="364" width="374" height="46"/>
+                                                    <rect key="frame" x="10" y="5" width="374" height="46"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Gjk-jf-a7O">
                                                             <rect key="frame" x="10" y="13.5" width="20.5" height="18.5"/>
                                                             <color key="tintColor" red="0.66274509800000003" green="0.6588235294" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6E-Tk-7Wm">
-                                                            <rect key="frame" x="40.5" y="14.5" width="48" height="17.5"/>
-                                                            <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
+                                                            <rect key="frame" x="40.5" y="13" width="55" height="20"/>
+                                                            <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="16"/>
                                                             <color key="textColor" red="0.66274509800000003" green="0.6588235294" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -150,7 +149,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kfN-It-2Nk">
-                                                    <rect key="frame" x="0.0" y="0.0" width="394" height="774"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="394" height="56"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title=""/>
                                                     <connections>
@@ -167,6 +166,8 @@
                                                 <constraint firstItem="r13-OO-w5n" firstAttribute="leading" secondItem="S3j-l0-jf4" secondAttribute="leading" constant="10" id="UEm-YQ-gsu"/>
                                                 <constraint firstAttribute="trailing" secondItem="r13-OO-w5n" secondAttribute="trailing" constant="10" id="f4d-rV-X1Q"/>
                                                 <constraint firstItem="r13-OO-w5n" firstAttribute="centerY" secondItem="S3j-l0-jf4" secondAttribute="centerY" id="k9p-e8-J5T"/>
+                                                <constraint firstItem="r13-OO-w5n" firstAttribute="top" secondItem="S3j-l0-jf4" secondAttribute="top" constant="5" id="lNE-aW-bQy"/>
+                                                <constraint firstAttribute="bottom" secondItem="r13-OO-w5n" secondAttribute="bottom" constant="5" id="oHE-Hn-i1D"/>
                                             </constraints>
                                         </view>
                                     </subviews>
